# django-hstore-project

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  README.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.json  vite.config.ts
apps/docs/: conf.py  index.rst  mkdocs.yml  pyproject.toml  zensical.toml
apps/docs/_extensions/: django_admin_icons.py  llms_txt_generator.py  widget_builder.py
apps/docs/_templates/partials/: webfonts.html
apps/docs/api/: field.rst  widget.rst
apps/docs/docs/: index.md  license.rst  llms-django-hstore-field.md  llms-django-hstore-field.txt  llms-django-hstore-widget.md  llms-django-hstore-widget.txt  llms-full.md  llms-full.txt  llms.md  playground.md  playground.rst
apps/docs/docs/api/: field.md  widget.md
apps/docs/docs/developer-guide/: architecture.md  architecture.rst  contributing.md  contributing.rst  frontend-build.md  frontend-build.rst
apps/docs/docs/llms/: index.md  index.rst
apps/docs/docs/technical/: hstore-vs-jsonb.md  hstore-vs-jsonb.rst  index.md  index.rst  use-cases.md  use-cases.rst
apps/docs/docs/user-guide/: best-practices.md  best-practices.rst  hstore-vs-jsonb.md  installation.md  installation.rst  quickstart.md  quickstart.rst
apps/docs/locales/ar/LC_MESSAGES/: autoapi.po  docs.po  index.po
apps/docs/locales/ar/LC_MESSAGES/autoapi/: index.po
apps/docs/locales/ar/LC_MESSAGES/docs/: license.po  playground.po
apps/docs/locales/bn/LC_MESSAGES/: autoapi.po  docs.po  index.po
apps/docs/locales/bn/LC_MESSAGES/autoapi/: index.po
apps/docs/locales/bn/LC_MESSAGES/docs/: license.po  playground.po
apps/docs/locales/de/LC_MESSAGES/: autoapi.po  docs.po  index.po
apps/docs/locales/de/LC_MESSAGES/autoapi/: index.po
apps/docs/locales/de/LC_MESSAGES/docs/: license.po  playground.po
apps/docs/locales/es/LC_MESSAGES/: autoapi.po  docs.po  index.po
apps/docs/locales/es/LC_MESSAGES/autoapi/: index.po
apps/docs/locales/es/LC_MESSAGES/docs/: license.po  playground.po
apps/docs/locales/fa/LC_MESSAGES/: autoapi.po  docs.po  index.po
apps/docs/locales/fa/LC_MESSAGES/autoapi/: index.po
apps/docs/locales/fa/LC_MESSAGES/docs/: license.po  playground.po
apps/docs/locales/fr/LC_MESSAGES/: autoapi.po  docs.po  index.po
apps/docs/locales/fr/LC_MESSAGES/autoapi/: index.po
apps/docs/locales/fr/LC_MESSAGES/docs/: license.po  playground.po
apps/docs/locales/hi/LC_MESSAGES/: autoapi.po  docs.po  index.po
apps/docs/locales/id/LC_MESSAGES/: autoapi.po  docs.po  index.po
apps/docs/locales/it/LC_MESSAGES/: autoapi.po  docs.po  index.po
apps/docs/locales/ja/LC_MESSAGES/: autoapi.po  docs.po  index.po
apps/docs/locales/ko/LC_MESSAGES/: autoapi.po  docs.po  index.po
apps/docs/locales/ml/LC_MESSAGES/: autoapi.po  docs.po  index.po
apps/docs/locales/pl/LC_MESSAGES/: autoapi.po  docs.po  index.po
apps/docs/locales/pt/LC_MESSAGES/: autoapi.po  docs.po  index.po
apps/docs/locales/ru/LC_MESSAGES/: autoapi.po  docs.po  index.po
apps/docs/locales/th/LC_MESSAGES/: autoapi.po  docs.po  index.po
apps/docs/locales/tr/LC_MESSAGES/: autoapi.po  docs.po  index.po
apps/docs/locales/uk/LC_MESSAGES/: autoapi.po  docs.po  index.po
apps/docs/locales/vi/LC_MESSAGES/: autoapi.po  docs.po  index.po
apps/docs/locales/zh/LC_MESSAGES/: autoapi.po  docs.po  index.po
apps/docs/static/: django-admin-fields.css
(+415 files in other folders)
