[project]
name = "django-hstore-project"
version = "0.0.0"
private = true
requires-python = ">=3.10"
description = "Monorepo for django-hstore-widget and django-hstore-field"
readme = "README.md"
license = { text = "MIT" }

[tool.uv.workspace]
members = ["packages/*", "apps/*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["RUF012"]

[tool.ruff.lint.isort]
known-first-party = [
    "django_hstore_widget",
    "django_hstore_field",
]
