[project]
name = "django-hstore-docs"
version = "0.0.0"
private = true
requires-python = ">=3.10"
description = "Zensical documentation for the Django HStore project"

dependencies = ["zensical"]

[dependency-groups]
dev = [
    { path = "../packages/django_hstore_widget", editable = true },
    { path = "../packages/django_hstore_field", editable = true },
]

[tool.uv]
dev = ["django-hstore-widget", "django-hstore-field"]
