[project]
name = "django-hstore-docs"
version = "0.0.0"
private = true
requires-python = ">=3.10"
description = "Sphinx documentation for the Django HStore project"

dependencies = [
    "sphinx>=8.0",
    "shibuya>=2026.7.8",
    "myst-parser>=4.0",
    "django>=5.2.16",
    "psycopg[binary]>=3.3.4",
    "sphinxcontrib-mermaid>=2.0.3",
    "sphinx-copybutton>=0.5",
    "sphinx-tabs>=3.4",
    "sphinx-termynal>=0.2",
    "sphinx-design>=0.5",
    "sphinx-contributors>=0.2",
    "sphinx-iconify>=0.1",
    "sphinx-autoapi>=3.0",
    "ruff>=0.11",
    "pyrefly>=1.0",
    "django-stubs>=5.0",
]

[tool.uv.sources]
django-hstore-widget = { workspace = true }
django-hstore-field = { workspace = true }

[dependency-groups]
docs = ["django-hstore-widget", "django-hstore-field"]
